--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -286,6 +286,10 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\Audio\Synth.cpp" />
     <ClCompile Include="src\BackEnd\BackEnd.cpp" />
     <ClCompile Include="src\BackEnd\GLFWIntegration.cpp" />
+    <ClCompile Include="src\Bvh\Gpu\Bvh.cpp" />
+    <ClCompile Include="src\Bvh\Gpu\Bvh_debug_draw.cpp" />
+    <ClCompile Include="src\Bvh\Gpu\Bvh_math.cpp" />
+    <ClCompile Include="src\Bvh\Gpu\Bvh_traversal.cpp" />
     <ClCompile Include="src\Camera\Frustum.cpp" />
     <ClCompile Include="src\Config\Config.cpp" />
     <ClCompile Include="src\Audio\Audio.cpp" />
@@ -335,10 +339,10 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\Game\Enemies\Shark\Shark.cpp" />
     <ClCompile Include="src\File\File_debug.cpp" />
     <ClCompile Include="src\File\File_bvh.cpp" />
-    <ClCompile Include="src\Bvh\Bvh.cpp" />
-    <ClCompile Include="src\Bvh\Bvh_debug_draw.cpp" />
-    <ClCompile Include="src\Bvh\Bvh_math.cpp" />
-    <ClCompile Include="src\Bvh\Bvh_traversal.cpp" />
+    <ClCompile Include="src\Bvh\Cpu\CpuBvh.cpp" />
+    <ClCompile Include="src\Bvh\Cpu\CpuBvh_debug_draw.cpp" />
+    <ClCompile Include="src\Bvh\Cpu\CpuBvh_math.cpp" />
+    <ClCompile Include="src\Bvh\Cpu\CpuBvh_traversal.cpp" />
     <ClCompile Include="src\File\File_model.cpp" />
     <ClCompile Include="src\Modelling\Clipping.cpp" />
     <ClCompile Include="src\Modelling\Types\ClippingCube.cpp" />
@@ -550,7 +554,9 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <None Include="res\shaders\OpenGL\GL_ocean_update_textures.comp" />
     <None Include="res\shaders\OpenGL\GL_outline.frag" />
     <None Include="res\shaders\OpenGL\GL_outline.vert" />
+    <None Include="res\shaders\OpenGL\GL_point_cloud_lighting.comp" />
     <None Include="res\shaders\OpenGL\GL_post_processing.comp" />
+    <None Include="res\shaders\OpenGL\GL_raytrace_scene.comp" />
     <None Include="res\shaders\OpenGL\GL_shadow_cube_map.frag" />
     <None Include="res\shaders\OpenGL\GL_shadow_cube_map.vert" />
     <None Include="res\shaders\OpenGL\GL_shadow_map_flashlight.frag" />
@@ -579,6 +585,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\API\OpenGL\Types\GL_shadow_map_array.h" />
+    <ClInclude Include="src\Bvh\Gpu\Bvh.h" />
     <ClInclude Include="src\Common\HellGlm.h" />
     <ClInclude Include="src\API\OpenGL\GL_backend.h" />
     <ClInclude Include="src\API\OpenGL\Renderer\GL_renderer.h" />
@@ -627,7 +634,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClInclude Include="src\AssetManagement\BakeQueue.h" />
     <ClInclude Include="src\Callbacks\Callbacks.h" />
     <ClInclude Include="src\Common\UniqueID.h" />
-    <ClInclude Include="src\Bvh\Bvh.h" />
+    <ClInclude Include="src\Bvh\Cpu\CpuBvh.h" />
     <ClInclude Include="src\Pathfinding\AStarMap.h" />
     <ClInclude Include="src\Game\Enemies\Kangaroo\Kangaroo.h" />
     <ClInclude Include="src\Pathfinding\AStar.h" />
