end of GI stream

--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -541,6 +541,10 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <None Include="res\shaders\OpenGL\GL_heightmap_physx_texture_generation.comp" />
     <None Include="res\shaders\OpenGL\GL_lighting.comp" />
     <None Include="res\shaders\OpenGL\GL_light_culling.comp" />
+    <None Include="res\shaders\OpenGL\GL_debug_light_volume.frag" />
+    <None Include="res\shaders\OpenGL\GL_debug_light_volume.vert" />
+    <None Include="res\shaders\OpenGL\GL_light_volume_lighting.comp" />
+    <None Include="res\shaders\OpenGL\GL_light_volume_mask.comp" />
     <None Include="res\shaders\OpenGL\GL_ocean_calculate_spectrum.comp" />
     <None Include="res\shaders\OpenGL\GL_ocean_composite.comp" />
     <None Include="res\shaders\OpenGL\GL_ocean_geometry.frag" />
